2007-04-25  Edward Hervey  <edward@fluendo.com>

	Patch by: Thibaut Girka <thibaut.girka@free.fr>
	* pitivi/ui/mainwindow.py:
	Fix i18n bug.
	Disable/enable [Render] button at correct time.
	Fixes #432204

2007-04-25  Edward Hervey  <edward@fluendo.com>

	Patch by: Jeff Fortin <nekohayo@gmail.com>
	* pitivi/ui/mainwindow.py:
	Make fullscreen action toggle-able (like other gtk/gnome apps).
	Remove 5px spacing in Global VBox that made the toolbar look weird.
	* pitivi/ui/sourcefactories.py:
	Add icons to popup-menu.
	Fixes #415060

2007-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	* pitivi/ui/sourcefactories.py:
	Remove cruft that was causing the explanation message to be hidden.
	Fixes #432656
	* pitivi/ui/timeline.py:
	Start by displaying the timeline. Fix explanation message.
	Only display explanation message in the timeline once there's at least
	one clip to add. Fixes #432724
	

2007-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timeline.py:
	Show explanation message again if a drag was canceled.
	Fixes #432682

2007-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/pitivi.py:
	* pitivi/settings.py:
	* pitivi/ui/mainwindow.py:
	Disable Advanced Mode by default until it works effectivelly.
	If you wish to use it, set the PITIVI_ADVANCED_MODE env variable to 1
	Fixes #432644

2007-04-23  Edward Hervey  <edward@fluendo.com>

	Patch by: Thibaut Girka <thibaut.girka@gmail.com>
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/tracklayer.py:
	* pitivi/ui/viewer.py:
	Make simple timeline view active when it contains elements, even though
	it wasn't previously displayed.
	Fixed #430686

2007-04-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Don't enable render button when we are viewing a temporary source.

2007-04-23  Edward Hervey  <edward@fluendo.com>

	Patch by: Jeff Fortin <nekohayo@gmail.com>
	* pitivi/ui/viewer.py:
	Remove horizontal bar between viewer and viewer controls.
	Fixes #421672
